--- a/app/src/main/res/layout/activity_my_plants.xml
+++ b/app/src/main/res/layout/activity_my_plants.xml
@@ -17,4 +17,16 @@
         android:padding="10dp"
         android:gravity="center"
         />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="Enter How Much Cookies You Want"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </LinearLayout>
