--- a/app/src/main/res/layout/item_myplant.xml
+++ b/app/src/main/res/layout/item_myplant.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        tools:text="Comprar leche"/>
+        tools:text="Belladona"/>
 
     <Button
         android:id="@+id/deleteButton"
