--- a/app/src/main/res/layout/activity_my_plants.xml
+++ b/app/src/main/res/layout/activity_my_plants.xml
@@ -22,11 +22,17 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:contentDescription="Enter How Much Cookies You Want"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:contentDescription="Lista de plantas" />
+
+    <Button
+        android:id="@+id/addPlantButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Añadir Planta" />
+
+
 
 </LinearLayout>
