--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -21,7 +21,7 @@
         android:layout_height="0dp"
         app:cardCornerRadius="32dp"
         android:layout_marginTop="-202dp"
-        android:layout_marginBottom="-32dp"
+        android:layout_marginBottom="-62dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,48 +29,60 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <!-- Info de cuidados arriba -->
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:fillViewport="true">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:id="@+id/careTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textColor="@android:color/black"
+                        android:text="Información de cuidados:"
+                        android:lineSpacingExtra="6dp" />
+
+                    <TextView
+                        android:id="@+id/sunlightTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textColor="@android:color/black"
+                        android:text="Sunlight info here"
+                        android:lineSpacingExtra="6dp" />
+
+                    <TextView
+                        android:id="@+id/wateringTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textColor="@android:color/black"
+                        android:text="Watering info here"
+                        android:lineSpacingExtra="6dp" />
+
+                </LinearLayout>
+            </ScrollView>
+
+            <!-- Menú de navegación abajo -->
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/navigationBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:menu="@menu/menu_activity_detail_navigation"/>
-            <TextView
-                android:id="@+id/careTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:textSize="16sp"
-                android:textColor="@android:color/black"
-                android:text="Información de cuidados:"
-                android:lineSpacingExtra="6dp"/>
-
-            <!-- Agregar múltiples TextViews para cada sección de cuidado -->
-            <TextView
-                android:id="@+id/sunlightTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:textSize="16sp"
-                android:textColor="@android:color/black"
-                android:text="Sunlight info here"
-                android:lineSpacingExtra="6dp"/>
-
-            <TextView
-                android:id="@+id/wateringTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:textSize="16sp"
-                android:textColor="@android:color/black"
-                android:text="Watering info here"
-                android:lineSpacingExtra="6dp"/>
-
+                app:menu="@menu/menu_activity_detail_navigation" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
