--- a/app/src/main/res/layout/activity_my_plant_detail.xml
+++ b/app/src/main/res/layout/activity_my_plant_detail.xml
@@ -21,6 +21,13 @@
         android:layout_height="wrap_content"
         android:text="Estado: Sin regar"
         android:paddingBottom="16dp"/>
+    <TextView
+        android:id="@+id/lastWateredTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Último riego:"
+        android:textSize="16sp"
+        android:layout_marginTop="5dp"/>
 
     <!-- CheckBox o Switch para marcar si está regada -->
     <CheckBox
@@ -28,6 +35,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Planta regada"
+        android:padding="8dp"
+        android:layout_marginTop="25dp"/>
+
+    <CheckBox
+        android:id="@+id/plagueCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Control de Plagas"
         android:padding="8dp"/>
 
     <!-- Botón para guardar los cambios -->
@@ -36,6 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Guardar cambios"
+        android:backgroundTint="@color/green"
         android:layout_gravity="center"
         android:padding="8dp"/>
 
