--- a/app/src/main/res/layout/activity_add_plant.xml
+++ b/app/src/main/res/layout/activity_add_plant.xml
@@ -11,6 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserratregular"
         android:text="Añadir Planta"
         android:textSize="24sp"
         android:paddingBottom="16dp" />
@@ -18,6 +19,7 @@
     <!-- Campo para ingresar el nombre de la planta -->
     <EditText
         android:id="@+id/editTextPlantName"
+        android:fontFamily="@font/montserratregular"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Nombre de la planta"
@@ -27,6 +29,7 @@
     <Button
         android:id="@+id/savePlantButton"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/montserratregular"
         android:layout_height="wrap_content"
         android:text="Guardar Planta"
         android:backgroundTint="@color/green"
