--- a/app/src/main/res/layout/item_myplant.xml
+++ b/app/src/main/res/layout/item_myplant.xml
@@ -1,26 +1,46 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="16dp"
+    app:cardElevation="6dp"
+    android:background="@android:color/transparent">
 
-
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:gravity="center_vertical"
         android:padding="10dp"
-        tools:text="Belladona"/>
+        android:background="@android:color/white"> <!-- fondo blanco para el card -->
 
-    <Button
-        android:id="@+id/deleteButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="?attr/materialIconButtonStyle"
-        app:icon="@drawable/ic_delete"
-        app:iconTint="#BF0F0F"/>
+        <TextView
+            android:id="@+id/titleTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserratregular"
+            android:textSize="22dp"
+            android:padding="10dp"
+            tools:text="Belladona"
+            android:textColor="@color/black" />
 
-</LinearLayout>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/deleteButton"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_gravity="start"
+            android:contentDescription="Eliminar planta"
+            app:backgroundTint="@color/green"
+            app:tint="@android:color/white"
+            app:srcCompat="@drawable/ic_minus"
+            app:fabCustomSize="42dp"
+            app:fabSize="auto"
+            app:useCompatPadding="true" />
+
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
