--- a/app/src/main/res/layout/activity_add_plant.xml
+++ b/app/src/main/res/layout/activity_add_plant.xml
@@ -1,38 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     tools:context=".activities.AddPlantActivity">
 
-    <!-- Título -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserratregular"
-        android:text="Añadir Planta"
-        android:textSize="26sp"
-        android:paddingBottom="16dp" />
-
-    <!-- Campo para ingresar el nombre de la planta -->
-    <EditText
-        android:id="@+id/editTextPlantName"
-        android:fontFamily="@font/montserratregular"
+    <!-- Imagen de fondo -->
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Nombre de la planta"
-        android:padding="20dp" />
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/background_myplants" />
 
-    <!-- Botón para guardar la planta -->
-    <Button
-        android:id="@+id/savePlantButton"
-        android:layout_width="wrap_content"
-        android:fontFamily="@font/montserratregular"
-        android:layout_height="wrap_content"
-        android:text="Guardar Planta"
-        android:backgroundTint="@color/green"
-        android:layout_gravity="center"
-        android:padding="10dp" />
-</LinearLayout>
+    <!-- Contenido encima -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:gravity="center">
+
+        <!-- Título -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/katibeh"
+            android:text="Nueva Planta"
+            android:textColor="@color/green"
+            android:textSize="76sp"
+            android:paddingBottom="24dp" />
+
+        <!-- CardView que agrupa todo -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            app:cardCornerRadius="30dp"
+            app:cardElevation="6dp"
+            app:cardBackgroundColor="#CC004D40">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+
+                <!-- Campo de texto -->
+                <EditText
+                    android:id="@+id/editTextPlantName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserratregular"
+                    android:hint="Nombre de la planta"
+                    android:padding="26dp"
+                    android:textSize="26sp"
+                    android:layout_marginTop="30dp"
+                    android:background="@android:color/transparent"
+                    android:textColor="@android:color/white"
+                    android:textColorHint="#80FFFFFF"
+                    android:layout_marginBottom="16dp" />
+
+                <!-- CardView como botón estilizado -->
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="30dp"
+                    android:layout_marginBottom="30dp"
+                    app:cardElevation="4dp"
+                    app:cardBackgroundColor="@android:color/white">
+
+                    <Button
+                        android:id="@+id/savePlantButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/montserratregular"
+                        android:text="Guardar Planta"
+                        android:textColor="@color/green"
+                        android:background="@android:color/transparent"
+                        android:textSize="16sp"
+                        android:paddingLeft="24dp"
+                        android:paddingRight="24dp"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="12dp" />
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+</FrameLayout>
