--- a/app/src/main/res/layout/item_myplant.xml
+++ b/app/src/main/res/layout/item_myplant.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:padding="10dp"
+        android:id="@+id/itemLayout"
         android:background="@android:color/white"> <!-- fondo blanco para el card -->
 
         <TextView
