--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -55,26 +55,31 @@
                         android:text="Nombre"
                         android:lineSpacingExtra="6dp" />
 
+                    <!-- Título Sunlight más grande -->
                     <TextView
                         android:id="@+id/sunlightTextView"
-                        android:fontFamily="@font/montserratregular"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="19sp"
-                        android:textColor="@android:color/black"
-                        android:text="Sunlight info here"
-                        android:lineSpacingExtra="6dp" />
+                        android:textSize="22sp"
 
+                    android:text="Sunlight info here"
+                    android:lineSpacingExtra="6dp"
+                    android:fontFamily="@font/montserratregular"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="8dp"/>
+
+                    <!-- Título Watering más grande -->
                     <TextView
-                        android:layout_marginTop="20dp"
                         android:id="@+id/wateringTextView"
                         android:layout_width="match_parent"
-                        android:fontFamily="@font/montserratregular"
                         android:layout_height="wrap_content"
-                        android:textSize="19sp"
-                        android:textColor="@android:color/black"
-                        android:text="Watering info here"
-                        android:lineSpacingExtra="6dp" />
+                        android:textSize="22sp"
+
+                    android:text="Watering info here"
+                    android:lineSpacingExtra="6dp"
+                    android:fontFamily="@font/montserratregular"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="8dp"/>
 
                 </LinearLayout>
             </ScrollView>
