--- a/app/src/main/res/menu/menu_activity_main.xml
+++ b/app/src/main/res/menu/menu_activity_main.xml
@@ -7,4 +7,10 @@
         android:title="Search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView"/>
+
+    <!--<item
+        android:id="@+id/action_filter"
+        android:icon="@drawable/filter_svgrepo_com"
+    android:title="Filtros"
+    app:showAsAction="ifRoom"/>-->
 </menu>
